# rus-torrent

./: .gitignore  Cargo.toml  README.md
scripts/: install-tauri-deps-ubuntu.sh  run-tauri.sh
src/: app.rs  config.rs  lib.rs  main.rs  path_completion.rs  torrent.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
