[package]
name = "rus-torrent-desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop torrent client built with Tauri and librqbit."

[lib]
name = "rus_torrent_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.102"
rus-torrent = { path = ".." }
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
